--- a/web-sim/index.html
+++ b/web-sim/index.html
@@ -7,31 +7,53 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <header>
-    <h1>animations.h Web Simulator</h1>
-    <div class="controls">
+  <canvas id="canvas"></canvas>
+
+  <!-- Floating collapsible panels -->
+  <details class="panel floating top-left" open>
+    <summary>Left Tree</summary>
+    <div class="panel-body">
       <label>Animation
-        <select id="anim">
+        <select id="animA">
           <option value="1">wave</option>
           <option value="2">pulse</option>
           <option value="3">chase</option>
           <option value="0">staticOn</option>
         </select>
       </label>
-      <label>Speed <input type="range" id="speed" min="0" max="20" step="0.1" value="6"/></label>
-      <label>Phase <input type="range" id="phase" min="-6.283" max="6.283" step="0.01" value="0"/></label>
-      <label>Branch mode <input type="checkbox" id="branch" checked/></label>
-      <label>Width <input type="range" id="width" min="1" max="10" step="1" value="3"/></label>
-      <label>Static level <input type="range" id="level" min="0" max="1" step="0.01" value="0.5"/></label>
+      <label>Branch mode <input type="checkbox" id="branchA" checked/></label>
+      <label>Invert <input type="checkbox" id="invertA"/></label>
+      <label>Width <input type="range" id="widthA" min="1" max="10" step="1" value="3"/></label>
+      <label>Static level <input type="range" id="levelA" min="0" max="1" step="0.01" value="0.5"/></label>
+    </div>
+  </details>
+
+  <details class="panel floating top-right" open>
+    <summary>Right Tree</summary>
+    <div class="panel-body">
+      <label>Animation
+        <select id="animB">
+          <option value="1">wave</option>
+          <option value="2">pulse</option>
+          <option value="3">chase</option>
+          <option value="0">staticOn</option>
+        </select>
+      </label>
+      <label>Branch mode <input type="checkbox" id="branchB" checked/></label>
+      <label>Invert <input type="checkbox" id="invertB"/></label>
+      <label>Width <input type="range" id="widthB" min="1" max="10" step="1" value="3"/></label>
+      <label>Static level <input type="range" id="levelB" min="0" max="1" step="0.01" value="0.5"/></label>
+    </div>
+  </details>
+
+  <details class="panel floating bottom-left" open>
+    <summary>Global</summary>
+    <div class="panel-body">
+      <label>Speed <input type="range" id="speedGlobal" min="0" max="20" step="0.1" value="6"/></label>
+      <label>Phase <input type="range" id="phaseGlobal" min="-6.283" max="6.283" step="0.01" value="0"/></label>
       <button id="pauseBtn">Pause</button>
     </div>
-  </header>
-
-  <canvas id="canvas"></canvas>
-
-  <footer>
-    <p>Uses the exact C++ <code>animations.h</code> compiled to WebAssembly. Colors fade from black to purple.</p>
-  </footer>
+  </details>
 
   <script type="module" src="./sim.js"></script>
 </body>
